--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,43 @@
-name: Update Submodules
-
+name: Daily Submodule Update
 on:
-  push:
-    branches:
-      - master
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   update-submodules:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - name: Checkout with Submodules
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "github-actions@example.com"
+
 
       - name: Update Submodules
         run: |
-          git submodule update --remote --merge
-          git add .
-          git commit -m "Update submodules"
-          git push
+          git submodule update --remote --merge --recursive
+          git add . 
+
+      - name: Commit Changes
+        id: commit
+        run: |
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m "chore: auto-update submodules [skip ci]"
+            echo "has_commit=true" >> $GITHUB_OUTPUT
+          else
+            echo "Pass"
+          fi
+
+      - name: Push Changes
+        if: steps.commit.outputs.has_commit == 'true'
+        run: git push origin HEAD:${{ github.ref }}
